--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -793,7 +793,7 @@ In the following is presented the pseudocode for the algorithm, in its two diffe
 \begin{algorithm}[H]
     \caption{Fairness through unawareness with proxy detection}
     \label{alg:fairness_algorithm}
-    \begin{algorithmic}[1]
+    \begin{algorithmic}
         \Require{dataset}
         \Ensure{fair dataset}
         \State $\text{global } \text{proxy\_protected\_attributes} \gets \{\}$
@@ -838,7 +838,7 @@ It's relevant to provide an explaination of the algorithm above:
 \begin{algorithm}[H]
     \caption{Dataset Fairness Checking}
     \label{alg:fairness_checking}
-    \begin{algorithmic}[2]
+    \begin{algorithmic}
         \Require{dataset, protected\_attribute}
         \Ensure{Boolean value indicating fairness}
         \If{\textit{fairness\_evaluation(dataset, protected\_attribute)} \textbf{is empty}}
@@ -854,7 +854,7 @@ This algorithm assesses the fairness of a given dataset with respect to a specif
 \begin{algorithm}[H]
     \caption{Fairness Evaluation}
     \label{alg:fairness_evaluation}
-    \begin{algorithmic}[3]
+    \begin{algorithmic}
         \Require{dataset, output\_column, protected\_attributes}
         \Ensure{List of attributes failing fairness evaluation}
         \State fairness\_evaluation\_list $\gets$ empty list\;
@@ -874,7 +874,7 @@ For each protected attribute, the algorithm computes a fairness metric using the
 \begin{algorithm}[H]
     \caption{Proxy and Protected Attributes Avoiding}
     \label{alg:proxy_protected_attributes_avoiding}
-    \begin{algorithmic}[4]
+    \begin{algorithmic}
         \Require{dataset, proxy\_protected\_attributes}
         \Ensure{Processed dataset avoiding proxy and protected attributes}
         
@@ -899,7 +899,7 @@ The only goal of this algorithm is to avoid the effects of proxy and protected a
 \begin{algorithm}[H]
     \caption{Proxy Detection via Variables Only}
     \label{alg:proxy_detection_variables_only}
-    \begin{algorithmic}[5]
+    \begin{algorithmic}
         \Require{protected\_attributes\_list, attributes}
         \Ensure{List of proxies}
         
@@ -922,7 +922,7 @@ This algorithm returns the proxy list obtained the fairness metric choice as est
 \begin{algorithm}[H]
     \caption{Proxy Detection via FP-growth}
     \label{alg:proxy_detection_fp_growth}
-    \begin{algorithmic}[6]
+    \begin{algorithmic}
         \Require{fp\_growth\_dataset}
         \Ensure{List of proxies}
         \State $\text{proxy\_list} \gets \{\}$ \Comment{Initialize an empty list to store detected proxies}
