--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -842,9 +842,9 @@ It's relevant to provide an explaination of the algorithm above:
         \Require{dataset, protected\_attribute}
         \Ensure{Boolean value indicating fairness}
         \If{\textit{fairness\_evaluation(dataset, protected\_attribute)} \textbf{is empty}}
-            \State \KwRet{\textbf{True}}\;
+            \KwRet{\textbf{True}}\;
         \EndIf
-        \State \KwRet{\textbf{False}}
+        \KwRet{\textbf{False}}
     \end{algorithmic}
 \end{algorithm}
 
