--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1053,47 +1053,137 @@ This algorithm adds rows to the dataset until every combination have the same fr
 \chapter{Validation} % possible chapter for Projects
 \label{chap:validation}
 %----------------------------------------------------------------------------------------
+\section{Dataset description}
 
+Before delving into the intricate details of the algorithm implementations presented earlier, it is imperative to provide a comprehensive overview of the dataset on which these algorithms have been applied. The chosen dataset for this work is the \emph{Canary Island Educational dataset}, an invaluable resource that underpins the empirical exploration of bias mitigation strategies in the context of the educational system in the Canary Islands. 
+
+The Canary Island Educational dataset is a rich and expansive repository of information, meticulously compiled to capture various facets of the educational landscape within the Canary Islands. This dataset comprises the comprehensive census of students enrolled over four distinct academic years, offering a multifaceted glimpse into the educational ecosystem. 
+
+The dataset encompasses a diverse array of attributes and data points, encapsulating critical information such as student demographics, academic performance, socioeconomic factors, and other pertinent variables. These attributes collectively provide a holistic perspective on the educational landscape, enabling a nuanced analysis of the factors that influence student outcomes and experiences. 
+
+The temporal dimension of the dataset, spanning four academic years, further enriches the analytical potential. It allows for the investigation of temporal trends, shifts in educational policies, and the evolution of student characteristics over time. This temporal depth is particularly valuable when examining the efficacy of bias mitigation strategies, as it facilitates the assessment of their impact across different academic years. 
+
+The Canary Island Educational dataset is not merely a repository of numbers and statistics; it is a window into the educational opportunities and challenges faced by students in the Canary Islands. By harnessing the insights gleaned from this dataset, it becomes possible to proactively address biases and promote equity within the educational system, ultimately striving for a more inclusive and just educational landscape.
+
+\subsection{Pre-processing operations on Canary Island Educational dataset}
+
+A deep analysis of the dataset led us to make a first features selection. More specifically for this work only the \emph{important} and \emph{protected} attributes have been selected.
+
+\subsubsection{Protected attributes choice}
+
+After a proper domain analysis the protected attributes selected to be passed to the algorithms have been a subset of the orginal selected:
+
+\begin{enumerate}
+
+    \item sex
+
+    \item capital island: if the student comes from the capital of the city
+
+    \item public\textunderscore private: if the school is public or private
+
+    \item inmigrant: if the student is either inmigrant or not
+
+    \item inmigrant second gen: if the student is either inmigrand of second gen or not
+
+    \item parent expectation
+    
+    \item mothly houseold income
+
+    \item cconomic, social and cultural satus index
+
+\end{enumerate}
+
+\subsubsection{Attributes pre-processing}
+
+The dataset documentation provided the information related to the type of each attribute (e.g. Continuous or Categorical). Starting from this information the variables have been pre-processed as established in the usual data pre-processing sub-step of the \emph{Fair-by-Design Workflow} proposed in this work.
+\end{itemize}
+
+\subsection{Goal of this work}
+
+The several output in this dataset are considered as protected attributes. More specifically the goal of this work is to predict the english level of a given student. Since the \emph{level\textunderscore ing} attribute is a categorical ones then the output states if a student has the same level of the majority of the students or if not. The goal is to make the predictor and the prediction fair, this means that the belonging of a student to a specific output, the match indeed, must no be influenced by any other factors rather than the predictor's mechanisms.
+
+In order to have a comprehensive evaluation of the performance of the workflow proposed here have been executed 3 separated experiments. These differntiate from each other only for the fairness pre-processing algorithm in the second sub-step of \emph{Data pre-processing} in the workflow.
 
 \section{Experiment setup}
+
 For each of the previous approaches have been chosen 3 models to perform the prediction:
+
 \begin{enumerate}
+
     \item \text{RandomForest Classifier}: RandomForest Classifier is a popular machine learning algorithm that leverages an ensemble of decision trees to make predictions. It excels at tasks like classification and regression, offering robustness against overfitting and high accuracy by aggregating the predictions of multiple decision trees. It's a versatile tool used in various applications, from finance to healthcare and image analysis.
+    
     \item \textbf{XGBoost Classifier}: XGBoost, short for Extreme Gradient Boosting, is a powerful and efficient machine learning algorithm known for its exceptional predictive performance. It's a gradient boosting technique that builds a strong predictive model by combining the predictions of multiple weak models, typically decision trees. XGBoost is widely used in data science and machine learning competitions due to its speed, accuracy, and flexibility. It can handle both regression and classification tasks and is prized for its ability to handle large datasets and complex relationships in the data.
+    
     \item \textbf{DecisionTree Classifier}: DecisionTree Classifier is a specific type of machine learning algorithm primarily used for classification tasks. It constructs a tree-like model, where each internal node represents a decision based on a specific feature, and each leaf node denotes the predicted class label for the input data point.
+
 \end{enumerate}
 
 On the previous models is applied the GridSearch with a \emph{cv} of 10 in order to select the best parameters combination for each one. In the following are reported the specific parameters for each model:
+
 \begin{enumerate}
+    
     \item RandomForest Classifier:
+    
     \begin{enumerate}
+       
         \item \emph{n\textunderscore estimators}: [10, 100, 10]
+       
         \item \emph{criterion}: [gini, entropy, log\textunderscore loss]
+       
         \item \emph{max\textunderscore depth}: [10, 50, 10]
+       
         \item \emph{max\textunderscore leaf\textunderscore nodes}: [10, 50, 10]
+    
     \end{enumerate}
+    
     \item XGBoost Classifier:
+    
     \begin{enumerate}
+    
         \item \emph{min\textunderscore child\textunderscore weight}: [1, 5, 10]
+    
         \item \emph{gamma}: [0.5, 1, 1.5, 2.5]
+    
         \item \emph{subsample}: [0.6, 0.8, 1.0]
+    
         \item \emph{colsample\textunderscore bytree}: [0.6, 0.6, 1.0]
+    
         \item \emph{max\textunderscore depth}: [3, 4, 5]
+    
     \end{enumerate}
+    
     \item DecisionTree Classifier:
+    
     \begin{enumerate}
+    
         \item \emph{criterion}: [gini, entropy, log\textunderscore loss]
+    
         \item \emph{max\textunderscore depth}: [10, 50, 10]
+    
         \item \emph{max\textunderscore leaf\textunderscore nodes}: [10, 50, 10]
+    
+    
     \end{enumerate}
+
 \end{enumerate}
 
-Each model is trained with the 67\% of the dataset while the 33\% is left for the test.
-In the following are reported the results for each grade. More specifically for each model is reported the best model selected and the accuracy on the test set.
-\newpage
-\section{Grade 3}
-\subsection{No-fair approach}
+
+Each machine learning model in our study is trained using a training dataset comprising 67\% of the original data, with the remaining 33\% reserved for testing purposes. To provide a more granular analysis, we've segmented the data based on the students' grade levels. Let \( G3 \) represent the subset of the original dataset filtered to include only students enrolled in grade 3.
+
+For the grade 3 dataset (\( G3 \)), we present the outcomes for every model. Specifically, we highlight the best-performing model identified during our evaluation process and report its accuracy on the corresponding test set.
+
+This focused analysis on grade 3 allows us to uncover insights that are specific to this grade level. By honing in on grade-specific subsets, we aim to gain a more nuanced understanding of the models' performance in the context of grade 3 education. The subsequent sections delve into the detailed results and analyses for grade 3, providing a comprehensive examination of the effectiveness of the models in this particular academic context.
+
+dditionally, we applied the Fairness through Unawareness algorithm, both with variables only and utilizing the FP-growth method, along with the data rebalancing algorithm to the training set. This evaluation aims to understand how obscuring protected attributes in the training set influences the performance of the models.
+
+To assess the fairness of the models and, consequently, the fairness of the entire workflow, we utilize two key fairness metrics: Demographic Parity and Equalized Odds. These metrics provide a comprehensive evaluation of the models' performance with respect to fairness considerations in the context of grade 3 education. The subsequent sections delve into the detailed results and analyses, shedding light on the impact of fairness-aware preprocessing techniques on model performance and overall workflow equity.
+
+\section{G3 analysis with Fairness through unawareness with proxy detection via fp-growth}
+
+\subsection{Performance evaluation}
+
 \subsubsection{Best models}
+
 \begin{tabular}{|c|c|}
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
@@ -1107,6 +1197,7 @@ In the following are reported the results for each grade. More specifically for 
 \end{tabular}
 
 \subsubsection{Accuracy}
+
 \begin{tabular}{|c|c|}
     \hline
     \textbf{Model} & \textbf{Accuracy} \\ 
@@ -1119,8 +1210,27 @@ In the following are reported the results for each grade. More specifically for 
     \hline
 \end{tabular}
 
-\subsection{Fairness throguh unawareness}
+\subsection{Fairness evaluation}
+
+\begin{tabular}{|c|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Demographic parity ratio} & textbf{Equalized odds ratio} \\
+    \hline
+    RandomForest Classifier & & \\
+    \hline
+    XGBoost Classifier & & \\
+    \hline
+    DecisionTree Classifier & & \\
+    \hline
+\end{tabular}
+
+
+\section{G3 analysis with Fairness through unawareness with proxy detection via variables only}
+
+\subsection{Performance evaluation}
+
 \subsubsection{Best models}
+
 \begin{tabular}{|c|c|}
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
@@ -1129,39 +1239,12 @@ In the following are reported the results for each grade. More specifically for 
     \hline
     XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier & \\ 
+    DecisionTree Classifier & \\
     \hline
 \end{tabular}
 
 \subsubsection{Accuracy}
-\begin{tabular}{|c|c|}
-    \hline
-    \textbf{Model} & \textbf{Accuracy} \\
-    \hline
-    RandomForest Classifier  &  \\
-    \hline
-    XGBoost Classifier & \\
-    \hline
-    DecisionTree Classifier & \\ 
 
-    \hline
-\end{tabular}
-
-\subsection{Fairness through unawareness with proxy detection via apriori}
-\subsubsection{Best models}
-\begin{tabular}{|c|c|}
-    \hline
-    \textbf{Model} & \textbf{Best parameters} \\
-    \hline
-    RandomForest Classifier  &  \\
-    \hline
-    XGBoost Classifier & \\
-    \hline
-    DecisionTree Classifier &  \\
-    \hline
-\end{tabular}
-
-\subsubsection{Accuracy} 
 \begin{tabular}{|c|c|}
     \hline
     \textbf{Model} & \textbf{Accuracy} \\ 
@@ -1174,8 +1257,27 @@ In the following are reported the results for each grade. More specifically for 
     \hline
 \end{tabular}
 
-\subsection{Fariness through unawareness with proxy detection via variables only}
+\subsection{Fairness evaluation}
+
+\begin{tabular}{|c|c|c|}
+    \hline
+    \textbf{Model} & \textbf{Demographic parity ratio} & textbf{Equalized odds ratio} \\
+    \hline
+    RandomForest Classifier & & \\
+    \hline
+    XGBoost Classifier & & \\
+    \hline
+    DecisionTree Classifier & & \\
+    \hline
+\end{tabular}
+
+
+\section{G3 analysis with Fairness through unawareness with proxy detection via data rebalancing}
+
+\subsection{Performance evaluation}
+
 \subsubsection{Best models}
+
 \begin{tabular}{|c|c|}
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
@@ -1184,11 +1286,12 @@ In the following are reported the results for each grade. More specifically for 
     \hline
     XGBoost Classifier & \\
     \hline
-    DecisionTree Classifier & \\ 
+    DecisionTree Classifier & \\
     \hline
 \end{tabular}
 
 \subsubsection{Accuracy}
+
 \begin{tabular}{|c|c|}
     \hline
     \textbf{Model} & \textbf{Accuracy} \\ 
@@ -1201,32 +1304,20 @@ In the following are reported the results for each grade. More specifically for 
     \hline
 \end{tabular}
 
-\subsection{Fairness through data rebalancing}
-\subsubsection{Best models}
-\begin{tabular}{|c|c|}
+\subsection{Fairness evaluation}
+
+\begin{tabular}{|c|c|c|}
     \hline
-    \textbf{Model} & \textbf{Best parameters} \\
+    \textbf{Model} & \textbf{Demographic parity ratio} & textbf{Equalized odds ratio} \\
     \hline
-    RandomForest Classifier  &  \\
+    RandomForest Classifier & & \\
     \hline
-    XGBoost Classifier & \\
+    XGBoost Classifier & & \\
     \hline
-    DecisionTree Classifier & \\ 
+    DecisionTree Classifier & & \\
     \hline
 \end{tabular}
 
-\subsubsection{Accuracy}
-\begin{tabular}{|c|c|}
-    \hline
-    \textbf{Model} & \textbf{Accuracy} \\
-    \hline
-    RandomForest Classifier  &  \\
-    \hline
-    XGBoost Classifier & \\
-    \hline
-    DecisionTree Classifier & \\ 
-    \hline
-\end{tabular}
 
 \iffalse
 \newpage
