--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1046,6 +1046,24 @@ This algorithm adds rows to the dataset until every combination have the same fr
 \chapter{Technical details}
 \label{chap:technical}
 
+This chapter delves into the intricate technical details of the Fair-by-Design workflow, providing an in-depth exploration of the tools, methodologies, and algorithms employed to ensure fairness and equity in the development of machine learning models.
+
+\section{Tools and Libraries}
+
+\subsection{Data Preparation and Algorithm Implementation}
+
+The foundation of our approach lies in the thoughtful selection of tools to develop algorithms and prepare data for modeling. The algorithms within the fairness pre-processing sub-step have been meticulously implemented using Python, harnessing the capabilities of renowned libraries such as \texttt{pandas} and \texttt{mlxtend}. \texttt{pandas} facilitates efficient data manipulation, enabling seamless preprocessing, while \texttt{mlxtend} plays a pivotal role in implementing algorithms like FP-growth, a key component of our Fairness through Unawareness workflow.
+
+\section{Disparate Impact Metric}
+
+\subsection{Metric Choice in Data Acquisition}
+
+A critical aspect of our work revolves around the selection and interpretation of fairness metrics. At the data acquisition step, the Disparate Impact metric emerges as a key player, acting as the chosen metric to evaluate the fairness degree of the dataset over protected attributes. In this context, the Disparate Impact metric adheres to its classical definition, ensuring a robust assessment of bias in the initial dataset.
+
+\subsection{Customization in Fairness through Unawareness Algorithms}
+
+In the Fairness through Unawareness algorithms, particularly via Apriori and FP-growth, the Disparate Impact metric takes on a distinctive form. Here, each row in the FP-growth dataset undergoes a tailored treatment. The value of the antecedent is considered the privileged value for the attribute, while the value of the consequent is treated as the outcome. This nuanced interpretation aligns with the intricacies of our workflow, enhancing the relevance and effectiveness of the fairness assessment within the Unawareness paradigm.
+
 
 %----------------------------------------------------------------------------------------
 
